# EDIpack2.0

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  browsecode.html  changeED_OBSERVABLE_SUPERC.f90  dependencies.html  edipack2.html  edipy2.html  examples.html  f-modindex.html  genindex.html  index.html  installation.html  meson.build  objects.inv  pyproject.toml  q  quickstart.html  search.html  searchindex.js  structure.html
.doctrees/: browsecode.doctree  dependencies.doctree  edipack2.doctree  edipy2.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  quickstart.doctree  structure.doctree
.doctrees/examples/: 01_bhz.doctree  02_ahm.doctree  03_excBHZ.doctree  3band.doctree  ahm.doctree  bhz.doctree  examples.doctree  exciton.doctree
.doctrees/fortran_src/: 01_dependencies.doctree  02_installation.doctree  03_modules.doctree  edipack2.doctree  init.doctree
.doctrees/python_api/: basicusage.doctree  edipy2.doctree  functions.doctree  globvars.doctree  installation.doctree  pyinstallation.doctree
.doctrees/quickstart/: 01_anderson.doctree  02_dmft.doctree  anderson.doctree  dmft.doctree  quickstart.doctree
.doctrees/structure/: bath.doctree  chifunctions.doctree  diag.doctree  ed_sector.doctree  edipack2.doctree  edipackmodule.doctree  fit.doctree  greensfunctions.doctree  hamiltonian.doctree  index_diag.doctree  index_greensfunctions.doctree  index_hamiltonian.doctree  index_observables.doctree  index_rdm.doctree  main.doctree  observables.doctree  rdm.doctree
.doctrees/utils/: README.doctree
.github/workflows/: ManualWorkflow.yml  PushWorkflow.yml  documentation.yml
_downloads/026dfd6a198e016d3e52ce47f9007d0f/: U3.00_hamiltonian.restart
_downloads/02bd26b8fd01100907c5a41c0bc0b2fa/: U1.00_hamiltonian.restart
_downloads/0c988b2ad15b0db61507fb3b9f1ecb1d/: 03_excBHZ.f90
_downloads/22e4a7d85f9731fc5134181fc704e70d/: M1_U2_J0.25_hamiltonian.restart
_downloads/34327f3ffd7e63656d7364ae8126ba12/: exct_M1_U6_J0.25_hamiltonian.restart
_downloads/393b12f3119a705ae15f0a2f6d5324a0/: inputED.conf
_downloads/49df6e50affaf06b03f90c874b319234/: inputAHM.conf
_downloads/5c9bcba0bf4a38222327d749b91d68d3/: U2.0_hamiltonian.restart
_downloads/62f458c5751c064651f717ba69afa2ab/: 02_dmft.f90
_downloads/69770a8188286a828bd3920d89b5507e/: U2.00_hamiltonian.restart
_downloads/7b1fca434448ebf2ee5291bfb39fe33a/: U2.50_hamiltonian.restart
_downloads/7efdd6a2175bbb0bd6ad072aff46331b/: exct_M1_U2_J0.25_hamiltonian.restart
_downloads/877ed8afebbc76edd941a389bcebe482/: U4.00_hamiltonian.restart
_downloads/b59fa1c4d3bd7d9e8f01403cd779c4e7/: 02_ahm.f90
_downloads/b8c78878de069b206cd652f1863a5783/: M1_U8_J0.25_hamiltonian.restart
_downloads/b99556aba533c91cfe3036486ebb1ecd/: exct_M1_U4_J0.25_hamiltonian.restart
_downloads/bf7fc15fae96ae9b980a81d7c65a085c/: inputED_BHZ.conf
_downloads/c3cac63c203e81ab326cda742d12b623/: inputED_exctBHZ.conf
_downloads/d9e08050c0e87795d14e05aefd1d6771/: U1.0_hamiltonian.restart
_downloads/e6e359f063d7c1b4a76b57ffeb71da45/: U5.0_hamiltonian.restart
_sources/: browsecode.rst.txt  dependencies.rst.txt  edipack2.rst.txt  edipy2.rst.txt  examples.rst.txt  index.rst.txt  installation.rst.txt  quickstart.rst.txt  structure.rst.txt
_sources/examples/: 01_bhz.rst.txt  02_ahm.rst.txt  03_excBHZ.rst.txt  3band.rst.txt  ahm.rst.txt  examples.rst.txt  exciton.rst.txt
_sources/fortran_src/: 03_modules.rst.txt  edipack2.rst.txt
_sources/python_api/: basicusage.rst.txt  globvars.rst.txt
_sources/quickstart/: 01_anderson.rst.txt  02_dmft.rst.txt
_sources/structure/: bath.rst.txt  diag.rst.txt  ed_sector.rst.txt  fit.rst.txt  (+8 more)
cmake/: ConfigUninstall.cmake  FindMKL.cmake  FindOrFetchSciFortran.cmake  FindSphinx.cmake  FortranCompilerConfig.cmake  PostConfig.cmake
doc/: basicusage.rst  browsecode.rst  conf.py  edipack2.rst  examples.rst  globvars.rst  index.rst  installation.rst  quickstart.rst  structure.rst
edipy2/: func_bath.py  func_bath_fit.py  func_io.py  func_main.py  func_read_input.py
etc/: dmft_ed.pc  dmft_ed.pc.in  dmft_ed_config.sh
examples/: 01_bhz.html  02_ahm.html  03_excBHZ.html  3band.html  ahm.html  bhz.html  examples.html  exciton.html
fortran_src/: 01_dependencies.html  02_installation.html  03_modules.html  edipack2.html  init.html
python/: __init__.py  edi2py.py  func_aux_funx.py  func_bath.py  func_bath_fit.py  func_io.py  func_main.py  func_read_input.py
python_api/: basicusage.html  edipy2.html  functions.html  globvars.html  installation.html  pyinstallation.html
quickstart/: 01_anderson.html  02_dmft.html  anderson.html  dmft.html  quickstart.html
src/: CMakeLists.txt  DMFT_ED.f90  EDIPACK2.f90  ED_AUX_FUNX.f90  ED_CHI_FUNCTIONS.f90  ED_DIAG.f90  ED_EIGENSPACE.f90  ED_GFMATRIX.f90  ED_GREENS_FUNCTIONS.f90  ED_INPUT_VARS.f90  ED_MAIN.f90  ED_OBSERVABLES.f90  ED_RDM.f90  ED_SECTOR.f90  ED_SETUP.f90  ED_SPARSE_MAP.f90  ED_SPARSE_MATRIX.f90  ED_VARS_GLOBAL.f90  ED_VERSION.f90  TODO.md  print_impG0.f90
src/ED_NORMAL/: #ED_GF_NORMAL.f90#  CMakeLists.txt  ED_CHI_DENS.f90  ED_CHI_EXCT.f90  ED_CHI_PAIR.f90  ED_CHI_SPIN.f90  ED_DIAG_NORMAL.f90  ED_GF_NORMAL.f90  ED_HAMILTONIAN_NORMAL.f90  ED_HAMILTONIAN_NORMAL_COMMON.f90  ED_HAMILTONIAN_NORMAL_DIRECT_HxV.f90  ED_HAMILTONIAN_NORMAL_STORED_HxV.f90  ED_OBSERVABLES_NORMAL.f90  ED_RDM_NORMAL.f90  diag_hybr_bath.f90
src/ED_NORMAL/direct/: HxV_dw.f90  HxV_eph.f90  HxV_local.f90  HxV_up.f90
src/ED_NORMAL/direct/Orbs/: HxV_eph.f90
src/ED_NORMAL/direct_mpi/: HxV_dw.f90  HxV_eph.f90  HxV_up.f90
src/ED_NORMAL/direct_mpi/Orbs/: HxV_eph.f90
src/ED_NORMAL/stored/: H_dw.f90  H_e_ph.f90  H_local.f90  H_non_local.f90  H_up.f90
src/ED_NORMAL/stored/Orbs/: H_e_ph.f90
structure/: bath.html  chifunctions.html  diag.html  ed_sector.html  edipack2.html  edipackmodule.html  fit.html  greensfunctions.html  hamiltonian.html  index_diag.html  index_greensfunctions.html  index_hamiltonian.html  index_observables.html  index_rdm.html  main.html  observables.html  rdm.html
test/: Makefile  Makefile~  test.sh
utils/: README.html
(+1048 files in other folders)
