# EDIpack2 library
FILE(GLOB ED_NORMAL_LIB_SRC
  ED_HAMILTONIAN_NORMAL_COMMON.f90
  ED_HAMILTONIAN_NORMAL_STORED_HxV.f90
  ED_HAMILTONIAN_NORMAL_DIRECT_HxV.f90
  ED_HAMILTONIAN_NORMAL.f90
  ED_DIAG_NORMAL.f90
  ED_GF_NORMAL.f90
  ED_CHI_SPIN.f90
  ED_CHI_DENS.f90
  ED_CHI_PAIR.f90
  ED_CHI_EXCT.f90
  ED_OBSERVABLES_NORMAL.f90
  ED_RDM_NORMAL.f90
  )
ADD_LIBRARY(ED_NORMAL_LIB OBJECT  ${ED_NORMAL_LIB_SRC})


